--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 project.title.name=test-config
 url=www.baidu.com 
 username=root
-password=123456
-redis.password=qaz88888
+password=12345622
+redis.password=2222qaz22222
 
 
