--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,6 +2,6 @@ project.title.name=test-config
 url=www.baidu.com 
 username=root
 password=12345622
-redis.password=2222qaz22222
+redis.password=33333
 
 
