--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,6 +2,6 @@ project.title.name=test-config
 url=www.baidu.com 
 username=root
 password=12345622
-redis.password=111111111111111啊啊啊啊aaaaa
+redis.password=111111aaaaaaaaaaa
 
 
